fix: 엔드포인트 권한 수정